# json-with-comments

./: .gitignore  .python-version  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yml  python-package.yml  test.yml  zizmor.yml
jsonc/: __init__.py  _add_comments.py  _types.py  _util.py
src/jsonc/: __init__.py  _add_comments.py  _util.py
tests/: test_jsonc.py  test_warn.py  testfile.jsonc
