[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "json-with-comments"
description = "JSON with Comments (jsonc) for Python"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "Takumasa Nakamura", email = "n.takumasa@gmail.com" },
]
keywords = ["jsonc", "json with comments"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/n-takumasa/json-with-comments"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github"
]

[tool.hatch.build.targets.wheel]
packages = ["jsonc"]

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",     # flake8-annotations
  "D",       # pydocstyle
  "FIX",     # flake8-fixme
  "TD",      # flake8-todos
  "PTH123",  # flake8-use-pathlib: builtin-open
  "PLR0913", # too-many-arguments
  # Conflicting lint rules
  "W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003",
  "COM812", "COM819", "ISC001", "ISC002", "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # Pyflakes: unused-import
]
"**/tests/**/*.py" = [
  "S101",    # flake8-bandit: assert
  "PLR2004", # magic-value-comparison
]
