[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/jsonc/_version.py"
build.targets.sdist.exclude = [
  "/.github"
]
build.targets.wheel.packages = ["src/jsonc"]

[project]
dynamic = ["version"]
name = "json-with-comments"
description = "JSON with Comments (jsonc) for Python"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Takumasa Nakamura", email = "n.takumasa@gmail.com" },
]
keywords = ["jsonc", "json with comments"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
urls.Repository = "https://github.com/n-takumasa/json-with-comments"

dependencies = []

[tool.uv]
managed = false

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.ruff]
line-length = 88
lint.extend-select = [
  "B",  # flake8-bugbear
  "I",  # isort
  "UP",  # pyupgrade
]

[tool.coverage]
run.source_pkgs = ["jsonc", "tests"]
run.branch = true
run.parallel = true
report.exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
]

[tool.mypy]
files = "src"
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
