[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/jsonc/_version.py"
build.targets.sdist.exclude = [
  "/.github"
]
build.targets.wheel.packages = ["src/jsonc"]

[project]
dynamic = ["version"]
name = "json-with-comments"
description = "JSON with Comments (jsonc) for Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Takumasa Nakamura", email = "n.takumasa@gmail.com" },
]
keywords = ["jsonc", "json with comments"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
urls.Repository = "https://github.com/n-takumasa/json-with-comments"

dependencies = []

[dependency-groups]
test = [
  "pytest>=8",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
]
lint = ["ruff"]
type_mypy = [
  "mypy[install-types]",
]
dev = [
  "tox>=4.22",
  "tox-uv",
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "type_mypy" },
]

[tool.uv.dependency-groups]
dev = { requires-python = ">=3.13" }

[tool.ruff]
line-length = 88
lint.extend-select = [
  "B",  # flake8-bugbear
  "I",  # isort
  "UP",  # pyupgrade
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src", "README.md"]
log_level = "INFO"
xfail_strict = true
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "-p", "no:faulthandler",
  "--doctest-modules",
  "--doctest-glob", "*.md",
]
filterwarnings = ["error"]

[tool.coverage]
run.source_pkgs = ["jsonc", "tests"]
run.branch = true
run.parallel = true
report.exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
]

[tool.mypy]
files = "src"
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.tox]
requires = [
  "tox>=4.21",
  "tox-uv",
]
env_list = [
  "lint", "type",
  "3.15", "3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8",
]

[tool.tox.gh.python]
"3.15" = ["3.15"]
"3.14" = ["3.14"]
"3.13" = ["3.13", "lint", "type"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
"3.9" = ["3.9"]
"3.8" = ["3.8"]

[tool.tox.env_run_base]
package = "wheel"
wheel_build_env = ".pkg"
dependency_groups = ["test"]
commands = [
  ["pytest", { replace = "posargs", default = [], extend = true }],
]
set_env = { PY_IGNORE_IMPORTMISMATCH = "1" }  # pytest-dev/pytest#9567
pass_env = [
  "GITHUB_ACTIONS",
]

[tool.tox.env.lint]
package = "skip"
dependency_groups = ["lint"]
commands = [
  ["ruff", "format", "--check", { replace = "posargs", default = [], extend = true }],
  ["ruff", "check", "--no-fix", { replace = "posargs", default = [], extend = true }],
]
pass_env = [
    "RUFF_OUTPUT_FORMAT",
]

[tool.tox.env.type_mypy]
package = "wheel"
dependency_groups = ["type_mypy"]
commands = [
  ["mypy", "--install-types", "--non-interactive", { replace = "posargs", default = [], extend = true }],
]
